src/components/ui/DataEntryBox/DataEntryBox.css
.datacard {
    height: var(--DATACARD-HEIGHT) !important;
    width: var(--DATACARD-WIDTH) !important;
    margin: 1rem auto !important;
    background-color: var(--DATACARD-BACKGROUND-COLOR) !important;
    display: flex !important;
    flex-direction: row !important;
    justify-content: space-between !important;
    align-items: center !important;
    cursor: pointer !important;
    overflow-x: hidden;
}

.dataentrybutton {
    height: 100%;
    width: 100%;
}

.datacard-colormark {
    min-width: 0.7rem;
    min-height: 100%;
    align-self: stretch;
    border-top-left-radius: 3px;
    border-bottom-left-radius: 3px;
}

.datacard-content {
    width: 100%;
    display: flex;
    flex-direction: column;
    justify-content: space-around;
    align-items: center;
}

.datacard-content-info {
    width: inherit;
    display: flex;
    justify-content: space-around;
}

.titlebox {
    padding: 0 0.5rem 0 1rem;
    width: var(--TITLEBOX-WIDTH);
    align-self: center;
    text-overflow: ellipsis;
    overflow: hidden;
}

.datebox-due {
    align-self: center;
    text-align: center;
    margin: 0 1.7rem 0 1rem;
    min-width: var(--DATEBOX-DUE-MIN-WIDTH);
}

.datebox-mobile {
    border-left: 1px solid;
    padding-left: 20px;
}

.datebox-expiration {
    width: var(--DATEBOX-CHIP-MIN-WIDTH);
    text-align: center;
    margin-left: 1rem;
}

.data-card-button-strip {
    margin: 0.5rem 0;
}

.datacard-icon-group-text {
    margin: 0 0.5rem;
    display: inline;
    vertical-align: middle;
}

.url-buttons {
    margin: 1em 0;
    display: flex;
    border-right: 1px solid #9a9a9a;
    border-left: 1px solid #9a9a9a;
    align-self: center;
    padding: 0 0.2rem;
}

.card-button {
    padding: 0 !important;
    margin: 0 0.8rem !important;
    border: none !important;
    height: max-content !important;
    flex-direction: column;
}

.card-button > p {
    margin: 0;
}

.card-button:focus::after {
    outline: none !important;
    border: none !important;
}

.card-button:hover {
    background-color: var(--CARD-BUTTON-HOVER) !important;
}

.icon-holder {
    align-self: center;
    padding-right: 10px;
}

.url-buttons-icons {
    width: 1.3rem;
}

.expand-icon {
    width: var(--EXPAND-ICON-WIDTH);
    transition: transform var(--DATACARD-EXPAND-TRANSISTION);
}

.expand-icon-collapse {
    transform: rotate(-180deg);
}

.react-css-collapse-transition {
    transition: height var(--DATACARD-EXPAND-TRANSISTION);
}

